# EnchantedChess

./: .gitmodules  LICENSE  README.md  main.cpp  meson.build
inc/: chess_bot.hpp  serial_port.hpp
src/: chess_bot.cpp  serial_port.cpp
